--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.0</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
+    <version>3.7.0</version>
+    <configuration>
+        <fork>true</fork>
+        <executable>/usr/lib/jvm/java-11-openjdk-amd64/bin/javac</executable>
+    </configuration>
       </plugin>
        <plugin>
         <groupId>org.apache.maven.plugins</groupId>
